Add scroll margin

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -282,6 +282,7 @@ section {
     max-width: 1000px;
     margin-left: auto;
     margin-right: auto;
+    scroll-margin-top: 80px;
 }
 
 section::before {
